Fix spacing on mobile

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -139,6 +139,10 @@
       h1 {
         font-size: 45px;
       }
+
+      .main-page-h2 {
+        font-size: 12px !important;
+      }
     }
 
     .logo-container {
